--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="https://arxiv.org/abs/1904.13088"> Dependence-Aware, Unbounded Sound Predictive Race Detection</a> 
+						<a href="https://dl.acm.org/citation.cfm?doid=3366395.3360605"> Dependence-Aware, Unbounded Sound Predictive Race Detection</a> 
 						<br> Kaan Genç, Jake Roemer, <b>Yufan Xu</b>, Michael D. Bond
 						<br> OOPSLA 2019 
 					</p>
