--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 				<div class="col-3">
 					<br><br>
-					<img class="portrait-img" src="image/self.JPG" alt="self portrait" >
+					<img class="portrait-img" src="image/self.png" alt="self portrait" >
 				</div>
 			</div>
 
