update gpa and image

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					I am a 1st year Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, computer system, and software analysis.
 				</div>
 
-				<div class="col-3">
+				<div class="col-2">
 					<br><br>
 					<img class="portrait-img" src="image/self.png" alt="self portrait" >
 				</div>
@@ -180,7 +180,7 @@
 			
 			<div class="row">
 				<div class="col-9">
-					<b>University of Utah</b> Ph.D Program (Fall 2019-now) <br> 
+					<b>University of Utah</b> Ph.D Program (4.0/4) (Fall 2019-now)  <br> 
 				</div>
 				
 			</div>
@@ -198,7 +198,7 @@
 			</div>
 			<div class="row">
 				<div class="col-9">
-					<b> Soochow University</b> B.Eng Software Engineeing (3.5/4)(May 2014)
+					<b> Soochow University</b> B.Eng Software Engineeing (3.5/4) (May 2014)
 				</div>
 			
 			</div>
