--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                         <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#education">Service</a>
+                        <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#service">Service</a>
                     </li>
                 </ul>
             </div>
@@ -56,7 +59,6 @@
 				<div class="col-9">
 					<p>
 					<h1>Yufan Xu</h1>
-					<i>Ph.D student</i><br>
 					<a href="https://www.cs.utah.edu/">School of Computing</a><br>
 					<a href="https://www.utah.edu/">University of Utah</a><br>
 					Office: 3445 MEB <br>
@@ -113,7 +115,7 @@
 					
 					<strong> University of Utah</strong>
 					<p>
-	 					Research Assistant (Fall 2019-now) <br> 
+	 					Research Assistant (Fall 2019-now) 
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -124,7 +126,7 @@
 				<div class="col-9">
 					<strong> The Ohio State University</strong>
 					<p>
-	 					Teaching Assistant (lecturer) <a href="http://web.cse.ohio-state.edu/cse1223/"> CSE 1223: Introduction to Computer Programming In Java.</a> (Fall 2018, Spring 2019)<br>
+	 					Teaching Assistant (Fall 2017-Spring 2019)
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -201,6 +203,19 @@
 	</section>
 	<br>
 
+	<!-- service -->
+	<section id="teaching" class="pageSection">
+		<div class="container cardboard">
+		<strong> Teaching </strong>
+		<br>
+			<div class="row">
+				<div class="col-9">
+					 Fall 2018, Spring 2019 <a href="http://web.cse.ohio-state.edu/cse1223/"> CSE 1223: Introduction to Computer Programming In Java.</a><br>
+				</div>
+			</div>
+		</div>
+	</section>
+	<br>
 	<!-- service -->
 	<section id="service" class="pageSection">
 		<div class="container cardboard">
