--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 						<br> Kaan Genç, Jake Roemer, <b>Yufan Xu</b>, Michael D. Bond
 						<br> OOPSLA 2019 
 					</p>
-<!-- 					<p>
-						<a href="">Analytical characterization and design space exploration for optimization of CNNs</a> 
+					<p>
+						<a href="https://arxiv.org/abs/2101.09808">Analytical characterization and design space exploration for optimization of CNNs</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> ASPLOS 2021 
-					</p> -->
+					</p>
 					
 				</div>
 			</div>
