--- a/index.html
+++ b/index.html
@@ -88,16 +88,22 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="https://dl.acm.org/citation.cfm?doid=3366395.3360605"> Dependence-Aware, Unbounded Sound Predictive Race Detection</a> 
-						<br> Kaan Genç, Jake Roemer, <b>Yufan Xu</b>, Michael D. Bond
-						<br> OOPSLA 2019 
+						<a href="">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
+						<br> SPAA 2021 
 					</p>
+
 					<p>
 						<a href="https://arxiv.org/abs/2101.09808">Analytical characterization and design space exploration for optimization of CNNs</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> ASPLOS 2021 
 					</p>
 					
+					<p>
+						<a href="https://dl.acm.org/citation.cfm?doid=3366395.3360605"> Dependence-Aware, Unbounded Sound Predictive Race Detection</a> 
+						<br> Kaan Genç, Jake Roemer, <b>Yufan Xu</b>, Michael D. Bond
+						<br> OOPSLA 2019 
+					</p>
 				</div>
 			</div>
 		</div>
