--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<div class="col-2">
 					<br><br>
-					<img class="portrait-img" src="image/self.png" alt="self portrait" >
+					<img class="portrait-img" src="image/self2.JPG" alt="self portrait" >
 				</div>
 			</div>
 
@@ -88,7 +88,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<a href="">Brief Announcement: Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> SPAA 2021 
 					</p>
