--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 				<div class="col-9">
 					<p>
-					<h1>Yufan Xu</h1>
+					<h2>Yufan Xu</h2>
 					<a href="https://www.cs.utah.edu/">School of Computing</a><br>
 					<a href="https://www.utah.edu/">University of Utah</a><br>
 					Office: 3445 MEB <br>
@@ -68,7 +68,7 @@
 					I am a Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, machine learning system, and software analysis.
 				</div>
 
-				<div class="col-2">
+				<div class="col-3">
 					<br><br>
 					<img class="portrait-img" src="image/self2.JPG" alt="self portrait" >
 				</div>
@@ -88,13 +88,13 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Brief Announcement: Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<a href="https://arxiv.org/pdf/2105.13480.pdf">Brief Announcement: Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> SPAA 2021 
 					</p>
 
 					<p>
-						<a href="https://arxiv.org/abs/2101.09808">Analytical characterization and design space exploration for optimization of CNNs</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3445814.3446759">Analytical characterization and design space exploration for optimization of CNNs</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> ASPLOS 2021 
 					</p>
