--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="https://arxiv.org/pdf/2105.13480.pdf">Brief Announcement: Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<a href="https://arxiv.org/abs/2105.13480">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> SPAA 2021 
 					</p>
