--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<div class="col-3">
 					<br><br>
-					<img class="portrait-img" src="image/self2.JPG" alt="self portrait" >
+					<img class="portrait-img" src="image/hike.png" alt="self portrait" >
 				</div>
 			</div>
 
@@ -88,7 +88,13 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="https://arxiv.org/abs/2105.13480">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<a href="">Training of Deep Learning Pipelines on Memory-Constrained GPUs via Segmented Fused-Tiled Execution</a> 
+						<br> <b>Yufan Xu</b>, Saurabh Raje, Atanas Rountev, Gerald Sabin, Aravind Sukumaran-Rajam, P. Sadayappan
+						<br> CC 2022 
+					</p>
+
+					<p>
+						<a href="https://dl.acm.org/doi/pdf/10.1145/3409964.3461828">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> SPAA 2021 
 					</p>
@@ -118,8 +124,18 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					
-					<strong> University of Utah</strong>
+					<strong> Latent Ai</strong> Princeton, NJ
+					<p>
+	 					Compiler Intern (Summer 2022) 
+	        		</p>
+				</div>
+				<div class="col-3">
+					<img class="logo-img" src="image/latentlogo.jpeg">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-9">
+					<strong> University of Utah</strong> Salt Lake City, UT
 					<p>
 	 					Research Assistant (Fall 2019-now) 
 	        		</p>
@@ -130,7 +146,7 @@
 			</div>
 			<div class="row">
 				<div class="col-9">
-					<strong> The Ohio State University</strong>
+					<strong> The Ohio State University</strong> Columbus, OH
 					<p>
 	 					Teaching Assistant (Fall 2017-Spring 2019)
 	        		</p>
@@ -141,7 +157,7 @@
 			</div>
 			<div class="row">
 				<div class="col-9">
-					<strong> T-CETRA, LLC.</strong>
+					<strong> T-CETRA, LLC.</strong> Columbus, OH
 					<p>
 	 					Software Engineer Internship (Summer 2019)
 	        		</p>
@@ -152,7 +168,7 @@
 			</div>
 			<div class="row">
 				<div class="col-9">
-					<strong> Fairchild Semiconductor</strong>
+					<strong> Fairchild Semiconductor</strong> Suzhou, JS
 					<p>
 	 					Application Engineer Internship (Summer 2014)
 	        		</p>
@@ -204,7 +220,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					 Fall 2018, Spring 2019 <a href="http://web.cse.ohio-state.edu/cse1223/"> CSE 1223: Introduction to Computer Programming In Java.</a><br>
+					 <a href="http://web.cse.ohio-state.edu/cse1223/"> CSE 1223: Introduction to Computer Programming In Java.</a> <br> Fall 2018, Spring 2019 <br>
 				</div>
 			</div>
 		</div>
@@ -217,7 +233,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					ASPLOS'21 AE committee
+					ASPLOS AE committee '21, '22 
 				</div>
 			</div>
 		</div>
