--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
 <html lang="en">
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8C4M3875SQ"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'G-8C4M3875SQ');
-	</script>
-
-	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
@@ -254,12 +243,16 @@
 
 <br>
 <br>
+
+	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=s0IJO6rQodOd8fW2It85MFUeTz5i0bbfWNxRhs9q1TM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
 	<!-- Bootstrap core JavaScript -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>	
+
+
 	
 </body>
 
