--- a/index.html
+++ b/index.html
@@ -243,8 +243,11 @@
 
 <br>
 <br>
-
+<section id="service" class="pageSection">
 	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=s0IJO6rQodOd8fW2It85MFUeTz5i0bbfWNxRhs9q1TM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
+</section>	
+
+	
 	<!-- Bootstrap core JavaScript -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
