--- a/index.html
+++ b/index.html
@@ -242,19 +242,19 @@
 	</section>
 
 <br>
-<br>
 
 	<section id="map" class="pageSection">
 		<div class="container cardboard">
 			<div class="row">
-				<div class="col-9">
+				<div class="col-9"align="center">
 					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=n&d=s0IJO6rQodOd8fW2It85MFUeTz5i0bbfWNxRhs9q1TM&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
 				</div>
 			</div>
 		</div>
 	</section>
 
-
+<br>
+<br>
 	
 	<!-- Bootstrap core JavaScript -->
 	<script src="js/jquery-3.3.1.min.js"></script>
