--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 <br>
 
-	<section id="map" class="pageSection">
+	<section id="map" class="hidden">
 		<div class="container cardboard">
 			<div class="row">
 				<div class="col-9"align="center">
