--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Training of Deep Learning Pipelines on Memory-Constrained GPUs via Segmented Fused-Tiled Execution</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3497776.3517766">Training of Deep Learning Pipelines on Memory-Constrained GPUs via Segmented Fused-Tiled Execution</a> 
 						<br> <b>Yufan Xu</b>, Saurabh Raje, Atanas Rountev, Gerald Sabin, Aravind Sukumaran-Rajam, P. Sadayappan
 						<br> CC 2022 
 					</p>
 
 					<p>
-						<a href="https://dl.acm.org/doi/pdf/10.1145/3409964.3461828">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3409964.3461828">Efficient Distributed Algorithms for Convolutional Neural Networks</a> 
 						<br> Rui Li, <b>Yufan Xu</b>, Aravind Sukumaran-Rajam, Atanas Rountev, P. Sadayappan
 						<br> SPAA 2021 
 					</p>
