--- a/index.html
+++ b/index.html
@@ -86,9 +86,16 @@
 	<section class="pageSection" id="research">
 		<div class="container cardboard">
 			<div class="row">
-				<div class="col-9">
+				<div class="col-12">
 				
 					<strong> Publications </strong>
+					<p>
+						<a href="">Effective Performance Modeling and Domain-Specific Compiler Optimization of CNNs for GPU</a> 
+						<br> <b>Yufan Xu</b>, Qiwei Yuan, Erik Curtis Barton, Rui Li, P. Sadayappan, Aravind Sukumaran-Rajam
+						<br> PACT 2022 
+					</p>
+
+
 					<p>
 						<a href="https://dl.acm.org/doi/10.1145/3497776.3517766">Training of Deep Learning Pipelines on Memory-Constrained GPUs via Segmented Fused-Tiled Execution</a> 
 						<br> <b>Yufan Xu</b>, Saurabh Raje, Atanas Rountev, Gerald Sabin, Aravind Sukumaran-Rajam, P. Sadayappan
