--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					ASPLOS AE committee '21, '22 
+					ASPLOS AE committee '21, '22; CGO AE committee '23
 				</div>
 			</div>
 		</div>
