--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="col-9">
 					<p>
 					<h2>Yufan Xu</h2>
-					<a href="https://www.cs.utah.edu/">School of Computing</a><br>
+					<a href="https://www.cs.utah.edu/">Kahlert School of Computing</a><br>
 					<a href="https://www.utah.edu/">University of Utah</a><br>
 					Office: 3445 MEB <br>
 					Email: yf.xu@utah.edu <br>
@@ -90,7 +90,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Effective Performance Modeling and Domain-Specific Compiler Optimization of CNNs for GPU</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3559009.3569674">Effective Performance Modeling and Domain-Specific Compiler Optimization of CNNs for GPU</a> 
 						<br> <b>Yufan Xu</b>, Qiwei Yuan, Erik Curtis Barton, Rui Li, P. Sadayappan, Aravind Sukumaran-Rajam
 						<br> PACT 2022 
 					</p>
