--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
 						<br> PACT 2022 
 					</p>
 
-
 					<p>
 						<a href="https://dl.acm.org/doi/10.1145/3497776.3517766">Training of Deep Learning Pipelines on Memory-Constrained GPUs via Segmented Fused-Tiled Execution</a> 
 						<br> <b>Yufan Xu</b>, Saurabh Raje, Atanas Rountev, Gerald Sabin, Aravind Sukumaran-Rajam, P. Sadayappan
@@ -133,7 +132,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<strong> Latent Ai</strong> Princeton, NJ
+					<strong> Latent AI</strong> Princeton, NJ
 					<p>
 	 					Compiler Intern (Summer 2022) 
 	        		</p>
@@ -168,7 +167,7 @@
 				<div class="col-9">
 					<strong> T-CETRA, LLC.</strong> Columbus, OH
 					<p>
-	 					Software Engineer Internship (Summer 2019)
+	 					Software Engineer Intern (Summer 2019)
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -179,7 +178,7 @@
 				<div class="col-9">
 					<strong> Fairchild Semiconductor</strong> Suzhou, JS
 					<p>
-	 					Application Engineer Internship (Summer 2014)
+	 					Application Engineer Intern (Summer 2014)
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -199,7 +198,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<b>University of Utah</b> Ph.D Program (4.0/4) (Fall 2019-now)  <br> 
+					<b> University of Utah</b> Ph.D Program (4.0/4) (Fall 2019-now)  <br> 
 				</div>
 			</div>
 			<div class="row">
@@ -242,7 +241,8 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					ASPLOS AE committee '21, '22; CGO AE committee '23
+					ASPLOS AE committee '21, '22 <br>
+					CGO AE committee '23
 				</div>
 			</div>
 		</div>
