--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
+					<strong> Uber</strong> Sunnyvale, CA
+					<p>
+	 					Software Engineer Intern (Summer 2023) 
+	        		</p>
+				</div>
+				<div class="col-3">
+					<img class="logo-img" src="image/uberlogo.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-9">
 					<strong> Latent AI</strong> Princeton, NJ
 					<p>
 	 					Compiler Intern (Summer 2022) 
