--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				<div class="col-9">
 					<strong> Uber</strong> Sunnyvale, CA
 					<p>
-	 					Software Engineer Intern (Summer 2023) 
+	 					PhD Software Engineer Intern (Summer 2023) 
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -253,7 +253,8 @@
 			<div class="row">
 				<div class="col-9">
 					ASPLOS AE committee '21, '22 <br>
-					CGO AE committee '23
+					CGO AE committee '23, '24 <br>
+					MICRO AE committee '23
 				</div>
 			</div>
 		</div>
