--- a/index.html
+++ b/index.html
@@ -90,6 +90,12 @@
 				
 					<strong> Publications </strong>
 					<p>
+						<a href="">PEAK: Generating High-Performance Schedules in MLIR</a> 
+						<br> Amir Tavakkoli, Sameeran Joshi, Shreya Singh <b>Yufan Xu</b>, P. Sadayappan, Marry Hall
+						<br> LCPC 2023 
+					</p>
+
+					<p>
 						<a href="https://dl.acm.org/doi/10.1145/3559009.3569674">Effective Performance Modeling and Domain-Specific Compiler Optimization of CNNs for GPU</a> 
 						<br> <b>Yufan Xu</b>, Qiwei Yuan, Erik Curtis Barton, Rui Li, P. Sadayappan, Aravind Sukumaran-Rajam
 						<br> PACT 2022 
