--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<strong> Publications </strong>
 					<p>
 						<a href="">PEAK: Generating High-Performance Schedules in MLIR</a> 
-						<br> Amir Tavakkoli, Sameeran Joshi, Shreya Singh, <b>Yufan Xu</b>, P. Sadayappan, Marry Hall
+						<br> Amir Tavakkoli*, Sameeran Joshi*, Shreya Singh, <b>Yufan Xu</b>, P. Sadayappan, Marry Hall
 						<br> LCPC 2023 
 					</p>
 
