--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					 <a href="http://web.cse.ohio-state.edu/cse1223/"> CSE 1223: Introduction to Computer Programming In Java.</a> <br> Fall 2018, Spring 2019 <br>
+					 <a href="https://syllabi.engineering.osu.edu/syllabi/cse_1223"> CSE 1223: Introduction to Computer Programming In Java</a> <br> Fall 2018, Spring 2019 <br>
 				</div>
 			</div>
 		</div>
