--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#service">Service</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="cv_yufan.pdf" download>CV</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -61,13 +61,16 @@
 				<div class="col-9">
 					<p>
 					<h2>Yufan Xu</h2>
-					<a href="https://www.cs.utah.edu/">Kahlert School of Computing</a><br>
-					<a href="https://www.utah.edu/">University of Utah</a><br>
-					Office: 3445 MEB <br>
-					Email: yf.xu@utah.edu <br>
+					MEB 3445<br>
+					Kahlert School of Computing<br>
+					University of Utah<br>
+					SLC, UT<br>
+					<a href="mailto:yf.xu@utah.edu">yf.xu@utah.edu</a><br>
+					<a href="https://https://scholar.google.com/citations?user=S_Jw_ooAAAAJ&hl=en">Google Scholar</a><br>
+					<a href="cv_yufan.pdf">cv</a><br>
 
 					<br>
-					I am a Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, machine learning system, and software analysis.
+					I am a Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
 				</div>
 
 				<div class="col-3">
@@ -215,7 +218,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<b> University of Utah</b> Ph.D Program (4.0/4) (Fall 2019-now)  <br> 
+					<b> University of Utah</b> Ph.D Program (4.0/4) (Expected Spring 2024)  <br> 
 				</div>
 			</div>
 			<div class="row">
