--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 					University of Utah<br>
 					SLC, UT<br>
 					<a href="mailto:yf.xu@utah.edu">yf.xu@utah.edu</a><br>
-					<a href="https://https://scholar.google.com/citations?user=S_Jw_ooAAAAJ&hl=en">Google Scholar</a><br>
-					<a href="cv_yufan.pdf">cv</a><br>
+					<a href="https://scholar.google.com/citations?user=S_Jw_ooAAAAJ&hl=en">Google Scholar</a><br>
+					<a href="cv_yufan.pdf">CV</a><br>
 
 					<br>
 					I am a Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
