--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<b> University of Utah</b> Ph.D Program (4.0/4) (Expected Spring 2024)  <br> 
+					<b> University of Utah</b> Ph.D Program (4.0/4) (fall 2019-Spring 2024)  <br> 
 				</div>
 			</div>
 			<div class="row">
@@ -263,7 +263,8 @@
 				<div class="col-9">
 					ASPLOS AE committee '21, '22 <br>
 					CGO AE committee '23, '24 <br>
-					MICRO AE committee '23
+					MICRO AE committee '23<br>
+					CC AE committee '24
 				</div>
 			</div>
 		</div>
