--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 					<a href="cv_yufan.pdf">CV</a><br>
 
 					<br>
-					I am a Ph.D student in Computer Science Department at University of Utah. I am working with Prof. Saday. My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
+					I will start working in the Programming Systems group at Uber.
+                    I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. 
+                    My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
+
 				</div>
 
 				<div class="col-3">
@@ -92,6 +95,18 @@
 				<div class="col-12">
 				
 					<strong> Publications </strong>
+					<p>
+						<a href="">Accelerated Auto-Tuning of GPU Kernels for Tensor Computations</a> 
+						<br> Chendi Li*, <b>Yufan Xu</b>*, Sina Mahdipour Saravani, P. Sadayappan
+						<br> ICS 2024 
+					</p>
+
+					<p>
+						<a href="https://arxiv.org/abs/2401.04836">CoNST: Code Generator for Sparse Tensor Networks</a> 
+						<br> Saurabh Raje, <b>Yufan Xu</b>, Atanas Rountev, Edward F. Valeev, P. Sadayappan
+						<br> Arxiv 2024 
+					</p>
+
 					<p>
 						<a href="">PEAK: Generating High-Performance Schedules in MLIR</a> 
 						<br> Amir Tavakkoli*, Sameeran Joshi*, Shreya Singh, <b>Yufan Xu</b>, P. Sadayappan, Marry Hall
@@ -143,6 +158,17 @@
 				<div class="col-9">
 					<strong> Uber</strong> Sunnyvale, CA
 					<p>
+	 					Software Engineer  
+	        		</p>
+				</div>
+				<div class="col-3">
+					<img class="logo-img" src="image/uberlogo.png">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-9">
+					<strong> Uber</strong> Sunnyvale, CA
+					<p>
 	 					PhD Software Engineer Intern (Summer 2023) 
 	        		</p>
 				</div>
@@ -165,7 +191,7 @@
 				<div class="col-9">
 					<strong> University of Utah</strong> Salt Lake City, UT
 					<p>
-	 					Research Assistant (Fall 2019-now) 
+	 					Research Assistant (Fall 2019-May 2024) 
 	        		</p>
 				</div>
 				<div class="col-3">
@@ -218,7 +244,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<b> University of Utah</b> Ph.D Program (4.0/4) (fall 2019-Spring 2024)  <br> 
+					<b> University of Utah</b> Ph.D Computer Science (4.0/4) (May 2024)  <br> 
 				</div>
 			</div>
 			<div class="row">
