--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
 				<div class="col-9">
 					<p>
 					<h2>Yufan Xu</h2>
-					MEB 3445<br>
-					Kahlert School of Computing<br>
-					University of Utah<br>
-					SLC, UT<br>
-					<a href="mailto:yf.xu@utah.edu">yf.xu@utah.edu</a><br>
+					<!-- MEB 3445<br>
+					Kahlert School of Computing<br> -->
+					<!-- University of Utah<br> -->
+					Uber <br>
+					Sunneyvale, CA<br>
+					<!-- <a href="mailto:sz.yufanxu@gmail.com">sz.yufanxu@gmail.com</a><br> -->
 					<a href="https://scholar.google.com/citations?user=S_Jw_ooAAAAJ&hl=en">Google Scholar</a><br>
 					<a href="cv_yufan.pdf">CV</a><br>
 
 					<br>
-					I will start working in the Programming Systems group at Uber.
+					I will start working in the Programming Systems group at Uber. <br>
                     I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. 
                     My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
 
