--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 					<a href="cv_yufan.pdf">CV</a><br>
 
 					<br>
-					I will start working in the Programming Systems group at Uber. <br>
-                    I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. 
+					I am working in the Programming Systems group at Uber. <br>
+                    I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. <br>
                     My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
 
 				</div>
@@ -159,7 +159,7 @@
 				<div class="col-9">
 					<strong> Uber</strong> Sunnyvale, CA
 					<p>
-	 					Software Engineer  
+	 					Software Engineer II, Programming Systems  
 	        		</p>
 				</div>
 				<div class="col-3">
