--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<br>
 					I am working in the Programming Systems group at Uber. <br>
                     I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. <br>
-                    My research interests are compiler optimization, machine learning system optimization, performance analysis, and program analysis.
+                    My research interests are compiler optimization, machine learning system optimization and program analysis.
 
 				</div>
 
@@ -248,11 +248,11 @@
 					<b> University of Utah</b> Ph.D Computer Science (4.0/4) (May 2024)  <br> 
 				</div>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-9">
-					<b> The Ohio State University</b> Ph.D Program (3.7/4) (Fall 2017-Spring 2019 transfer to Utah) <br>
+					<b> The Ohio State University</b> (3.7/4) (Fall 2017-Spring 2019 transfer to Utah) <br>
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="col-9">
 					<b> University of Florida</b> M.S Computer Science (3.6/4) (May 2016)
