--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Accelerated Auto-Tuning of GPU Kernels for Tensor Computations</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3650200.3656626">Accelerated Auto-Tuning of GPU Kernels for Tensor Computations</a> 
 						<br> Chendi Li*, <b>Yufan Xu</b>*, Sina Mahdipour Saravani, P. Sadayappan
 						<br> ICS 2024 
 					</p>
