--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					</p>
 
 					<p>
-						<a href="">PEAK: Generating High-Performance Schedules in MLIR</a> 
+						<a href="http://www.lcpcworkshop.org/LCPC23/DRAFT/paper_015.pdf">PEAK: Generating High-Performance Schedules in MLIR</a> 
 						<br> Amir Tavakkoli*, Sameeran Joshi*, Shreya Singh, <b>Yufan Xu</b>, P. Sadayappan, Marry Hall
 						<br> LCPC 2023 
 					</p>
