--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<p>
 						<a href="https://arxiv.org/abs/2401.04836">CoNST: Code Generator for Sparse Tensor Networks</a> 
 						<br> Saurabh Raje, <b>Yufan Xu</b>, Atanas Rountev, Edward F. Valeev, P. Sadayappan
-						<br> Arxiv 2024 
+						<br> TACO 2024 
 					</p>
 
 					<p>
@@ -291,7 +291,8 @@
 					ASPLOS AE committee '21, '22 <br>
 					CGO AE committee '23, '24 <br>
 					MICRO AE committee '23<br>
-					CC AE committee '24
+					CC AE committee '24 <br>
+					CGO Program Committee '25
 				</div>
 			</div>
 		</div>
