--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
 					ASPLOS AE committee '21, '22 <br>
 					CGO AE committee '23, '24 <br>
 					MICRO AE committee '23<br>
-					CC AE committee '24 <br>
-					CGO Program Committee '25
+					CC AE committee '24<br>
+					CGO Program committee '25<br>
+					SIGPLAN-M mentor '24-Now
 				</div>
 			</div>
 		</div>
