--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</p>
 
 					<p>
-						<a href="https://arxiv.org/abs/2401.04836">CoNST: Code Generator for Sparse Tensor Networks</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3689342">CoNST: Code Generator for Sparse Tensor Networks</a> 
 						<br> Saurabh Raje, <b>Yufan Xu</b>, Atanas Rountev, Edward F. Valeev, P. Sadayappan
 						<br> TACO 2024 
 					</p>
