--- a/index.html
+++ b/index.html
@@ -281,18 +281,40 @@
 	<!-- service -->
 	<section id="service" class="pageSection">
 		<div class="container cardboard">
-		<strong> Service </strong>
+		<strong> Program committee member</strong>
 		<br>
 			<div class="row">
 				<div class="col-9">
-					ASPLOS AE committee '21, '22 <br>
-					CGO AE committee '23, '24 <br>
-					MICRO AE committee '23<br>
-					CC AE committee '24<br>
-					CGO Program committee '25<br>
-					SIGPLAN-M mentor '24-Now
+					CGO '25<br>
 				</div>
 			</div>
+		<strong> Artifact evaluation committee </strong>
+		<br>
+			<div class="row">
+				<div class="col-9">
+					ASPLOS '21, '22; 
+					CGO '23, '24; 
+					MICRO  '23; 
+					CC'24<br>
+				</div>
+			</div>
+		<strong> Journal reviewer </strong>
+		<br>
+			<div class="row">
+				<div class="col-9">
+					ACM Transactions on Architecture and Code Optimization(TACO) <br>
+					Future Generation Computer Systems <br>
+				</div>
+			</div>
+		
+		<strong> Mentoring </strong>
+		<br>
+			<div class="row">
+				<div class="col-9">
+					SIGPLAN-M mentor '24-Now<br>
+				</div>
+			</div>
+
 		</div>
 	</section>
 
