--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<a href="cv_yufan.pdf">CV</a><br>
 
 					<br>
-					I am working in the Programming Systems group at Uber. <br>
+					I am currently working in the Programming Systems Group(<a href="https://www.uber.com/us/en/about/science/">PSG</a>) at Uber. <br>
                     I received Ph.D degree in Computer Science at the University of Utah and my advisor is P. Saday. <br>
                     My research interests are compiler optimization, machine learning system optimization and program analysis.
 
@@ -296,6 +296,13 @@
 					CGO '23, '24; 
 					MICRO  '23; 
 					CC'24<br>
+				</div>
+			</div>		
+		<strong> Organizing Committee member</strong>
+		<br>
+			<div class="row">
+				<div class="col-9">
+					ICS '25<br>
 				</div>
 			</div>
 		<strong> Journal reviewer </strong>
