--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					Sunnyvale, CA<br>
 					<!-- <a href="mailto:sz.yufanxu@gmail.com">sz.yufanxu@gmail.com</a><br> -->
 					<a href="https://scholar.google.com/citations?user=S_Jw_ooAAAAJ&hl=en">Google Scholar</a><br>
-					<a href="cv_yufan.pdf">CV</a><br>
+					<!-- <a href="cv_yufan.pdf">CV</a><br> -->
 
 					<br>
 					I am currently working in the Programming Systems Group(<a href="https://www.uber.com/us/en/about/science/">PSG</a>) at Uber. <br>
