--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 				<div class="col-12">
 				
 					<strong> Publications </strong>
+					
 					<p>
 						<a href="https://dl.acm.org/doi/10.1145/3650200.3656626">Accelerated Auto-Tuning of GPU Kernels for Tensor Computations</a> 
 						<br> Chendi Li*, <b>Yufan Xu</b>*, Sina Mahdipour Saravani, P. Sadayappan
@@ -285,7 +286,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					CGO '25<br>
+					CGO '25, ICPP '25<br>
 				</div>
 			</div>
 		<strong> Artifact evaluation committee </strong>
