--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					CGO '25, ICPP '25<br>
+					CGO '25, ICPP '25, ICCD '25<br>
 				</div>
 			</div>
 		<strong> Artifact evaluation committee </strong>
