--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
 				<div class="col-12">
 				
 					<strong> Publications </strong>
-					
+					<p>
+						<a href="">Accelerating Complex Stencil Computations with Adaptive Fusion Strategy</a> 
+						<br> Siqi Wang, Hailong Yang, Pengbo Wang, Shaokang Du, <b>Yufan Xu</b>, Qingxiao Sun, Xiaoyan Liu, Xuezhu Wang, Xuning Liang, Zhongzhi Luan, Yi Liu, Depei Qian 
+						<br> ICS 2025 
+					</p>
 					<p>
 						<a href="https://dl.acm.org/doi/10.1145/3650200.3656626">Accelerated Auto-Tuning of GPU Kernels for Tensor Computations</a> 
 						<br> Chendi Li*, <b>Yufan Xu</b>*, Sina Mahdipour Saravani, P. Sadayappan
