--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 					<strong> Publications </strong>
 					<p>
 						<a href="">Accelerating Complex Stencil Computations with Adaptive Fusion Strategy</a> 
-						<br> Siqi Wang, Hailong Yang, Pengbo Wang, Shaokang Du, <b>Yufan Xu</b>, Qingxiao Sun, Xiaoyan Liu, Xuezhu Wang, Xuning Liang, Zhongzhi Luan, Yi Liu, Depei Qian 
+						<br> Siqi Wang, Hailong Yang, Pengbo Wang, Shaokang Du, <b>Yufan Xu</b>, Qingxiao Sun,
+						<br> Xiaoyan Liu, Xuezhu Wang, Xuning Liang, Zhongzhi Luan, Yi Liu, Depei Qian 
 						<br> ICS 2025 
 					</p>
 					<p>
