--- a/index.html
+++ b/index.html
@@ -247,22 +247,22 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					<b> University of Utah</b> Ph.D Computer Science (4.0/4) (May 2024)  <br> 
-				</div>
-			</div>
-			<!-- <div class="row">
-				<div class="col-9">
-					<b> The Ohio State University</b> (3.7/4) (Fall 2017-Spring 2019 transfer to Utah) <br>
-				</div>
-			</div> -->
-			<div class="row">
-				<div class="col-9">
-					<b> University of Florida</b> M.S Computer Science (3.6/4) (May 2016)
+					<b> University of Utah</b> Ph.D Computer Science  (May 2024)<br> 
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-9">
-					<b> Soochow University</b> B.Eng Software Engineeing (3.5/4) (May 2014)
+					<b> The Ohio State University</b> (Fall 2017-Spring 2019 transfer to Utah) <br>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-9">
+					<b> University of Florida</b> M.S Computer Science  (May 2016)
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-9">
+					<b> Soochow University</b> B.Eng Software Engineeing  (May 2014)
 				</div>
 			
 			</div>
@@ -290,7 +290,7 @@
 		<br>
 			<div class="row">
 				<div class="col-9">
-					CGO '25, ICPP '25, ICCD '25<br>
+					CGO '25, ICPP '25, ICCD '25, PPoPP '26<br>
 				</div>
 			</div>
 		<strong> Artifact evaluation committee </strong>
