--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				
 					<strong> Publications </strong>
 					<p>
-						<a href="">Accelerating Complex Stencil Computations with Adaptive Fusion Strategy</a> 
+						<a href="https://dl.acm.org/doi/10.1145/3721145.3725768">Accelerating Complex Stencil Computations with Adaptive Fusion Strategy</a> 
 						<br> Siqi Wang, Hailong Yang, Pengbo Wang, Shaokang Du, <b>Yufan Xu</b>, Qingxiao Sun, et al.
 						<br> ICS 2025 
 					</p>
